Fix mobile spacing issues

--- a/src/components/Canvas/o-scene.scss
+++ b/src/components/Canvas/o-scene.scss
@@ -2,4 +2,8 @@
   position: fixed;
   z-index: 9999;
   pointer-events: none;
+
+  @include media("<=tablet") {
+    display: none;
+  }
 }
