--- a/src/components/Transition/o-intro.scss
+++ b/src/components/Transition/o-intro.scss
@@ -9,8 +9,8 @@
 
 	&_inner {
 		display: flex;
-		align-items: flex-end;
-		justify-content: flex-end;
+		align-items:center;
+		justify-content: center;
 	}
 
 
