--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -56,12 +56,7 @@ body {
 	overflow-y: hidden;
 }
 
-a,
-.c-link,
-h4,
-.o-text {
-	font-family: "Riposte";
-}
+
 
 .scroll-to-top {
 	position: fixed !important;
